--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,25 @@
 version: "2"
 services:
+  frontend:
+    container_name: frontend
+    restart: always
+    build: ../Coronahelfer-Hackathon-Frontend 
+    volumes:
+      - '../Coronahelfer-Hackathon-Frontend:/app'
+    ports: 
+      - "8080:80"
+    depends_on:
+      - app
+    links:
+      - app
   app:
-    container_name: app
+    container_name: backend
     restart: always
     build: .
     ports:
-      - "3000:3000"
+      - "8081:3000"
+    depends_on:
+      - mongo
     links:
       - mongo
   mongo:
