--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@googlemaps/google-maps-services-js": "^2.3.1",
     "@types/node": "^12.0.3",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.4",
