--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^12.0.3",
+    "bcrypt": "^4.0.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.4",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.11",
     "morgan": "^1.9.1",
+    "path": "^0.12.7",
+    "pdfkit": "^0.11.0",
     "swagger-ui-express": "^4.0.5",
     "validator": "^11.0.0"
   },
@@ -28,7 +32,7 @@
     "@types/mocha": "^5.2.7",
     "@types/supertest": "^2.0.7",
     "chai": "^4.2.0",
-    "mocha": "^6.1.4",
+    "mocha": "^7.1.1",
     "supertest": "^4.0.2",
     "ts-node": "^8.2.0",
     "tslint": "^5.16.0",
