--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcrypt": "^4.0.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
