--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^2.3.1",
     "@types/node": "^12.0.3",
+    "bcrypt": "^4.0.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
