--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,5 +23,9 @@ services:
   mongo:
     container_name: mongo
     image: mongo
+    volumes:
+      - db:/data/db
     ports:
       - "27017:27017"
+volumes:
+  db:
