--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,15 @@ services:
     container_name: frontend
     restart: always
     build: ../Coronahelfer-Hackathon-Frontend 
+    volumes:
+      - ./data/nginx/:/etc/nginx/conf.d
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot 
     ports: 
       - "80:80"
+      - "443:443"
     depends_on:
+      - certbot
       - app
     links:
       - app
@@ -24,8 +30,14 @@ services:
     container_name: mongo
     image: mongo
     volumes:
-      - db:/data/db
+      - ./data/db:/data/db
     ports:
       - "27017:27017"
-volumes:
-  db:
+  certbot:
+    container_name: certbot
+    image: certbot/certbot
+    restart: unless-stopped
+    volumes:
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 85d & wait $${!}; done;'"
