Fix typo in the path to the server certificate

--- a/data/nginx/default.conf
+++ b/data/nginx/default.conf
@@ -19,7 +19,7 @@ server {
     server_name coronahelfer.eu;
     server_tokens off;
 
-    ssl_certificate /etc/letsencrypt/live/coronahelfer.eufullchain.pem;
+    ssl_certificate /etc/letsencrypt/live/coronahelfer.eu/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/coronahelfer.eu/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
