--- a/data/nginx/default.conf
+++ b/data/nginx/default.conf
@@ -25,7 +25,14 @@ server {
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location / {
-        proxy_pass  http://coronahelfer.eu;
+        proxy_pass http://coronahelfer.eu;
+        proxy_set_header    Host                $http_host;
+        proxy_set_header    X-Real-IP           $remote_addr;
+        proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
+    }
+
+    location /api/ {
+        proxy_pass http://coronahelfer.eu:3000;
         proxy_set_header    Host                $http_host;
         proxy_set_header    X-Real-IP           $remote_addr;
         proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
