--- a/deployment.yml
+++ b/deployment.yml
@@ -39,6 +39,8 @@ apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: corona-helfer-ingress
+  annotations:
+    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
 spec:
   tls:
     - hosts:
