hotfix .build folder changes

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev:build": "tsc",
-    "start": "npm run dev:build && node .build/src/server.js",
+    "start": "npm run dev:build && node .build/server.js",
     "geocodingServiceTest": "node .build/src/app/geocoding/GeocodingService.js",
     "test": "mocha -r ts-node/register --resolveJsonModule ./src/test/**/*.spec.ts"
   },
