--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev:build": "tsc",
-    "start": "npm run dev:build && node .build/server.js",
+    "dev": "ts-node ./src/server.ts",
+    "build": "tsc",
+    "start": "npm run build && node .build/server.js",
     "geocodingServiceTest": "node .build/src/app/geocoding/GeocodingService.js",
     "test": "mocha -r ts-node/register --resolveJsonModule ./src/test/**/*.spec.ts"
   },
