--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "db:dev": "docker-compose up",
+    "db:seed": "ts-node ./src/config/db/seed-database.ts",
     "dev": "ts-node ./src/server.ts",
     "build": "tsc",
     "start": "npm run build && node .build/server.js",
@@ -29,6 +31,7 @@
     "morgan": "^1.9.1",
     "path": "^0.12.7",
     "pdfkit": "^0.11.0",
+    "ramda": "^0.27.0",
     "swagger-ui-express": "^4.0.5",
     "validator": "^11.0.0"
   },
