--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "db:dev": "docker-compose up",
-    "db:seed": "ts-node ./src/config/db/seed-database.ts",
-    "dev": "ts-node ./src/server.ts",
+    "seed:dev": "LOCAL_DB=true ts-node ./src/config/db/seed-database.ts",
+    "dev": "docker-compose up -d && LOCAL_DB=true tsnd ./src/server.ts",
     "build": "tsc",
     "start": "npm run build && node .build/server.js",
     "geocodingServiceTest": "node .build/src/app/geocoding/GeocodingService.js",
@@ -43,6 +42,7 @@
     "mocha": "^7.1.1",
     "supertest": "^4.0.2",
     "ts-node": "^8.2.0",
+    "ts-node-dev": "^1.0.0-pre.44",
     "tslint": "^5.16.0",
     "typescript": "^3.4.5"
   }
